# www.bovbel.com

./: .gitignore  AGENTS.md  README.md  cdk-outputs.json  cdk.context.json  cdk.json  deploy.bash  deploy.py  flake.nix  get_resume.py  index.html  logo.ai  pyproject.toml  requirements.in  requirements.txt  resume.html  test.py
.github/workflows/: deploy.yml
bovbel_site/: build.py  deploy.py  sites.py
bovbel_site/infra/: app.py  domain.py  mail.py  website.py
infra/: app.py  mail.py  website.py
sites/paul/: generate.py
sites/paul/static/: index.html
sites/rebecca/: generate.py
sites/rebecca/content/: home.html  pages.toml
sites/rebecca/static/: style.css
sites/rebecca/templates/: page.html
static/: index.html  meet.html  resume.html
static/meet/: index.html
static/resume/: index.html
