[project]
name = "paul-bovbel-com"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "botocore[crt]",
    "requests",
    "pytest",
    "pymupdf",
    "aws-cdk-lib",
    "constructs",
]

[project.scripts]
deploy-site = "bovbel_site.deploy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bovbel_site"]

[tool.pytest.ini_options]
markers = [
    "pre_deploy: tests that run before deployment (local files)",
    "post_deploy: tests that run after deployment (live site)",
]
